--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/commons-cli-1.2/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/poi-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/Dan/java_projects/jars/commons-cli-1.2/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Dan/java_projects/jars/poi-3.9/poi-ooxml-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/Dan/java_projects/jars/poi-3.9/poi-3.9-20121203.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
