--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/poi-3.9-20121203.jar"/>
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/poi-ooxml-3.9-20121203.jar"/>
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/commons-cli-1.2/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/super-csv/super-csv-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
