--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/ooxml-lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/ooxml-lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/poi-3.9/ooxml-lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/daniilmigacev/java_projects/jars/opencsv-2.3/deploy/opencsv-2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
